# stock-screener

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dev.env  pyproject.toml
src/stock_screener/: consts.py  screening_script.py  stock_screener.py
src/stock_screener/dal_util/: db_conn.py
src/stock_screener/stock_symbols/: nifty_csv_grabber.py  save_stocks_to_sql.py
src/stock_screener/stock_symbols/csvs/: ind_nifty100list.csv  ind_nifty200list.csv  ind_nifty500list.csv  ind_nifty50list.csv  ind_niftyIndiaFPI150_list.csv  ind_niftylargemidcap250list.csv  ind_niftymidcap50list.csv  ind_niftymidcapselect_list.csv  ind_niftymidsmallcap400list.csv  ind_niftysmallcap100list.csv  ind_niftysmallcap250list.csv  ind_niftysmallcap50list.csv  ind_niftytotalmarket_list.csv
src/stock_screener/stock_symbols/sql_setup/: docker-compose.yml  init.sql
src/stock_screener/valuation_snapshot/: save_valuation_snapshots.py
src/stock_screener/value_references/: save_value_references_to_sql.py
tests/: test_stock_screener.py
