[project]
name = "stock-screener"
version = "0.1.0"
description = ""
authors = [
    {name = "Tejas K Jaiswal",email = "tejasjaiswal9711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
    "lxml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "stock_screener", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
